Distributes compaction coordination across managers
For an overview of how this works see the javadoc in
CompactionCoordinator.